@@ -6,7 +6,7 @@ from distutils.errors import *
 from distutils.core import PyPIRCCommand
 from distutils.spawn import spawn
 from distutils import log
-from hashlib import md5
+import sys
 import os, io
 import socket
 import platform
@@ -14,6 +14,12 @@ import configparser
 import http.client as httpclient
 import base64
 import urllib.parse
+
+# this keeps compatibility for 2.3 and 2.4
+if sys.version < "2.5":
+    from md5 import md5
+else:
+    from hashlib import md5
 
 class upload(PyPIRCCommand):
 
